--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha app/test/planets --timeout 10000",
     "start": "nodemon server.js"
   },
   "keywords": [],
@@ -18,6 +18,9 @@
     "mongoose": "^5.2.9"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.3"
   }
 }
